--- a/src/CipherHelper/CipherHelper.csproj
+++ b/src/CipherHelper/CipherHelper.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{D37A4BBB-44FB-4680-8919-7E0180D89831}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <AssemblyName>CipherHelper</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,11 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RijndaelCipherHelper.cs" />
+    <Compile Include="CipherHelper.cs" />
     <Compile Include="ICipherHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TripleDesCipherHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
