--- a/src/CipherHelper/CipherHelper.csproj
+++ b/src/CipherHelper/CipherHelper.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D37A4BBB-44FB-4680-8919-7E0180D89831}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
+    <RootNamespace>CipherHelper</RootNamespace>
     <AssemblyName>CipherHelper</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CipherHelper.cs" />
-    <Compile Include="ICipherHelper.cs" />
+    <Compile Include="IStringHashHelper.cs" />
+    <Compile Include="StringCipherHelper.cs" />
+    <Compile Include="IStringCipherHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringHashHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
